--- a/Laserschnitt-Vorlagen/Spalt-Werkzeug/index.html
+++ b/Laserschnitt-Vorlagen/Spalt-Werkzeug/index.html
@@ -12,12 +12,12 @@
 <body id="body">
 <b>1.</b>
 <input type=file id="fileSVG" onchange="load();" />
-<input type="button" value="2. Absolutize coordinates" onclick="absolutize();" />
-<input type="button" value="3. Identify puzzle pieces" onclick="identify();" />
-<input type="button" value="4. Cut slots" onclick="cut();" />
-<input type="button" value="5. Export modified SVG" onclick="export();" />
+<input type="button" value="2. Identify puzzle pieces" onclick="identifyPieces();" />
+<input type="button" value="3. Cut slots" onclick="cutSlots();" />
+<input type="button" value="4. Export modified SVG" onclick="exportSVG();" />
 <br/>
 <br/>
+<div id="view"></div>
 
 </body>
 
